@@ -1,160 +1,233 @@
 package com.github.jmatss.torc.bencode;
 
 import java.io.EOFException;
-import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.nio.ByteBuffer;
-import java.nio.file.Files;
 import java.util.*;
 
-public class BencodeDecode extends Bencode {
+/**
+ * Class to decode bencode-encoded data.
+ */
+class BencodeDecode extends Bencode {
+    /**
+     * Contains the bytes of the contents to decode.
+     */
     private ByteBuffer buffer;
 
-    public BencodeDecode(ByteBuffer buffer) {
+    protected BencodeDecode(ByteBuffer buffer) {
         this.buffer = buffer;
     }
 
-    public BencodeDecode(byte[] fileContent) {
-        this(ByteBuffer.allocate(fileContent.length).put(fileContent));
-        this.buffer.rewind();
+    protected BencodeDecode(byte[] fileContent) {
+        this(ByteBuffer.wrap(fileContent));
     }
 
-    public BencodeDecode(File file) throws IOException {
-        this(Files.readAllBytes(file.toPath()));
-    }
-
-    /**
-     * Rewinds/resets the internal ByteBuffer position to point at the start of the buffer.
-     */
-    public void rewind() {
-        this.buffer.rewind();
+    protected BencodeDecode(InputStream inputStream) throws IOException {
+        this(inputStream.readAllBytes());
     }
 
     /**
      * Used to see what type the next "structure" is (dict, list, string or integer).
      *
      * @return the BencodeType of the next structure.
-     * @throws EOFException     when this function is called when there are no more data to decode.
-     * @throws BencodeException when the given bencoded data has incorrect format.
+     * @throws EOFException     if this function is called when there are no more data to decode.
+     * @throws BencodeException if the given bencoded data has incorrect format.
      */
-    public BencodeType getNextType() throws EOFException, BencodeException {
-        if (!this.buffer.hasRemaining())
+    protected BencodeType getNextType() throws EOFException, BencodeException {
+        if (!this.buffer.hasRemaining()) {
             throw new EOFException();
+        }
 
         int oldPosition = this.buffer.position();
-        char typeChar = byteToChar(this.buffer.get());
-        BencodeType type = BencodeType.valueOf(typeChar);
-        if (type == null)
-            throw new BencodeException("Incorrect format of bencoded data. Expected BencodeType, got(int): " + (int) typeChar);
+
+        byte nextTypeByte = this.buffer.get();
+        char nextTypeChar = super.byteToChar(nextTypeByte);
+
+        BencodeType nextType = BencodeType.valueOf(nextTypeChar);
+        if (nextType == null) {
+            String msg = "Incorrect format of bencoded data.";
+            msg += " Expected BencodeType, got(int): " + (int)nextTypeChar;
+            throw new BencodeException(msg);
+        }
 
         // Reset position so that the next "read" of the buffer starts at the correct position.
         this.buffer.position(oldPosition);
-        return type;
+
+        return nextType;
     }
 
     /**
      * Gets the next bencode "structure" (dict, list, string or integer).
      *
      * @return the next structure wrapped inside a BencodeResult
-     * @throws EOFException                 when this function is called when there are no more data to decode.
-     * @throws BencodeException             when the given bencoded data has incorrect format.
+     * @throws EOFException                 if this function is called when there are no more data to decode.
+     * @throws BencodeException             if the given bencoded data has incorrect format.
      * @throws UnsupportedEncodingException if utf-8 isn't supported.
      */
-    public BencodeResult getNext() throws EOFException, BencodeException, UnsupportedEncodingException {
+    protected BencodeData<Object> getNext()
+    throws EOFException, BencodeException, UnsupportedEncodingException {
+        Object value;
         BencodeType type = getNextType();
+
         switch (type) {
             case NUMBER:
-                return new BencodeResult<>(type, getNumber());
+                value = getNumber();
+                break;
+
             case LIST:
-                return new BencodeResult<>(type, getList());
+                value = getList();
+                break;
+
             case DICTIONARY:
-                return new BencodeResult<>(type, getDictionary());
+                value = getDictionary();
+                break;
+
             case STRING:
-                return new BencodeResult<>(type, getString());
+                value = getString();
+                break;
+
             default:
-                throw new BencodeException("Parsed incorrect BencodeType.");
+                throw new BencodeException("Parsed incorrect BencodeType: \"" + type + "\".");
         }
+
+        return new BencodeData<>(type, value);
     }
 
-    public BencodeString getString() throws BencodeException, UnsupportedEncodingException {
-        // Make sure that the first character is a digit.
-        char startChar = byteToChar(this.buffer.get());
-        if (!Character.isDigit(startChar)) {
-            throw new BencodeException("Incorrect startChar while decoding string. " +
-                    "Expected: a digit, got: " + startChar);
+    /**
+     * Returns the next bencode structure which is assumed to be a String.
+     * 
+     * @return the bencode string.
+     * @throws BencodeException             if unable to parse string length.
+     * @throws UnsupportedEncodingException if "utf-8" isn't supported on this platform.
+     */
+    private BencodeString getString() throws BencodeException, UnsupportedEncodingException {
+        StringBuilder stringLengthBuf = new StringBuilder();
+
+        // Iterate through all digits until a "string separator" is found
+        // and add all digits into the `stringLengthBuf` buffer.
+        byte currentByte = this.buffer.get();
+        char currentChar = super.byteToChar(currentByte);
+        while (currentChar != STRING_SEPARATOR) {
+            if (!Character.isDigit(currentChar)) {
+                String msg = "Received non digit character while parsing string length: ";
+                throw new BencodeException(msg + currentChar);
+            }
+
+            stringLengthBuf.append(currentChar);
+
+            currentByte = this.buffer.get();
+            currentChar = super.byteToChar(currentByte);
         }
 
-        StringBuilder sb = new StringBuilder(Character.toString(startChar));
-        char current;
-        while ((current = byteToChar(this.buffer.get())) != STRING_SEPARATOR) {
-            if (!Character.isDigit(current))
-                throw new BencodeException("Received non digit character while parsing string length: " + current);
-            sb.append(current);
+        if (stringLengthBuf.length() == 0) {
+            String msg = "Received no digits while parsing string length.";
+            throw new BencodeException(msg);
         }
 
-        // TODO: Make sure that the length isn't a weird value ex. extremely large.
-        int stringLength = Integer.parseInt(sb.toString());
+        // Parse the `stringLength` string into a int a get that amount
+        // of bytes from `this.buffer` which contains the string that
+        // is to be parsed.
+        int stringLength = Integer.parseInt(stringLengthBuf.toString());
         byte[] bytes = new byte[stringLength];
         this.buffer.get(bytes);
 
         return new BencodeString(bytes, ENCODING);
     }
 
-    public Long getNumber() throws BencodeException {
-        // "Remove" the first char and make sure it is a 'i'.
-        char startChar = byteToChar(this.buffer.get());
-        if (BencodeType.valueOf(startChar) != BencodeType.NUMBER) {
-            throw new BencodeException("Incorrect startChar while decoding number. " +
-                    "Expected: " + BencodeType.NUMBER.getChar() + ", got: " + startChar);
+    /**
+     * Returns the next bencode structure which is assumed to be a Number.
+     * 
+     * @return the bencode number as a long.
+     */
+    private long getNumber() {
+        StringBuilder digits = new StringBuilder();
+
+        // "Remove" the first char which is assumes to be 'i'.
+        this.buffer.get();
+
+        // Iterate through all digits and add them to the `digits` variable 
+        // that will be converted to long before returning it.
+        byte currentByte = this.buffer.get();
+        char currentChar = super.byteToChar(currentByte);
+        while (Character.isDigit(currentChar)) {
+            digits.append(currentChar);
+
+            currentByte = this.buffer.get();
+            currentChar = super.byteToChar(currentByte);
         }
 
-        StringBuilder sb = new StringBuilder();
-        char current;
-        while (Character.isDigit(current = byteToChar(buffer.get()))) {
-            sb.append(current);
-        }
-        // The last iteration of the while loop "removes" the ending 'e'.
-
-        return Long.parseLong(sb.toString());
+        // The last iteration of the while loop would have "removed" the ending
+        // 'e', so the position of `this.buffer` is correct.
+        return Long.parseLong(digits.toString());
     }
 
-    public Map<BencodeString, BencodeResult> getDictionary()
+    /**
+     * Returns the next bencode structure which is assumed to be a SortedMap.
+     * 
+     * @return the bencoded dictionary as a Map.
+     * @throws EOFException                 if EOF reached unexpectedly.
+     * @throws BencodeException             if badly formatted bencoding is found.
+     * @throws UnsupportedEncodingException if "utf-8" isn't supported on this platform.
+     */
+    protected SortedMap<BencodeString, BencodeData<Object>> getDictionary()
     throws EOFException, BencodeException, UnsupportedEncodingException {
-        // "Remove" the first char and make sure it is a 'd'.
-        char startChar = byteToChar(this.buffer.get());
-        if (BencodeType.valueOf(startChar) != BencodeType.DICTIONARY) {
-            throw new BencodeException("Incorrect startChar while decoding dictionary. " +
-                    "Expected: " + BencodeType.DICTIONARY.getChar() + ", got: " + startChar);
+        var resultMap = new TreeMap<BencodeString, BencodeData<Object>>();
+
+        // "Remove" the first char which is assumes to be 'd'.
+        this.buffer.get();
+
+        // Iterate through all key-value pairs in the dictionary and add to
+        // the `resultMap`. According to the bencode standard, the keys must
+        // be valid bencode strings.
+        BencodeType nextType = this.getNextType();
+        while (nextType != BencodeType.END) {
+            if (nextType != BencodeType.STRING) {
+                String msg = "Received a non String key for a dictionary: ";
+                throw new BencodeException(msg + nextType);
+            }
+
+            BencodeString key = this.getString();
+            BencodeData<Object> value = this.getNext();
+            resultMap.put(key, value);
+
+            nextType = this.getNextType();
         }
 
-        Map<BencodeString, BencodeResult> map = new TreeMap<>();
-        BencodeType nextKeyType;
-        while ((nextKeyType = getNextType()) != BencodeType.END) {
-            if (nextKeyType != BencodeType.STRING)
-                throw new BencodeException("Received a non String key for a dictionary.");
-            map.put(getString(), getNext());
-        }
+        // "Remove" the ending 'e'.
+        this.buffer.get();
 
-        this.buffer.position(this.buffer.position() + 1);   // "Remove" the ending 'e'.
-        return map;
+        return resultMap;
     }
 
-    public List<BencodeResult> getList()
+    /**
+     * Returns the next bencode structure which is assumed to be a List.
+     * 
+     * @return the bencoded List.
+     * @throws EOFException                 if EOF reached unexpectedly.
+     * @throws BencodeException             if badly formatted bencoding is found.
+     * @throws UnsupportedEncodingException if "utf-8" isn't supported on this platform.
+     */
+    private List<BencodeData<Object>> getList()
     throws EOFException, BencodeException, UnsupportedEncodingException {
-        // "Remove" the first char and make sure it is a 'l'.
-        char startChar = byteToChar(this.buffer.get());
-        if (BencodeType.valueOf(startChar) != BencodeType.LIST) {
-            throw new BencodeException("Incorrect startChar while decoding list. " +
-                    "Expected: " + BencodeType.LIST.getChar() + ", got: " + startChar);
+        // "Remove" the first char which is assumes to be 'l'.
+        this.buffer.get();
+
+        var resultList = new ArrayList<BencodeData<Object>>();
+
+        // Iterate through all values in the list which can be of any type.
+        BencodeType nextType = this.getNextType();
+        while (nextType != BencodeType.END) {
+            BencodeData<Object> value = this.getNext();
+            resultList.add(value);
+
+            nextType = this.getNextType();
         }
 
-        List<BencodeResult> list = new ArrayList<>();
-        while (getNextType() != BencodeType.END) {
-            list.add(getNext());
-        }
+        // "Remove" the ending 'e'.
+        this.buffer.get();
 
-        this.buffer.position(this.buffer.position() + 1);   // "Remove" the ending 'e'.
-        return list;
+        return resultList;
     }
 }
